Fix announcement on mobile

--- a/main.css
+++ b/main.css
@@ -22,16 +22,15 @@ main {
   margin-right: auto;
 }
 
-#preNavContainer {
+#announcement {
   width: 100%;
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #E9F0F7;
   display: flex;
-
 }
 
-#announceTitle{
+#announcement .title {
   height: 19px;
   box-sizing: border-box;
   color: #191919;
@@ -57,8 +56,6 @@ main {
   box-sizing: border-box;
   width: 20%;
   text-align: left;
-
-
 }
 
 .languagePicker {
@@ -66,6 +63,11 @@ main {
   width: 20%;
   height: 17px;
   text-align: right;
+}
+
+.languagePicker .icon {
+  position: relative;
+  top: 2px;
 }
 
 .currencyText {
@@ -82,9 +84,51 @@ main {
   width:14px;
 }
 
-
 .padded {
   padding-left: 4vw;
   padding-right: 4vw;
   box-sizing: border-box;
+}
+
+#announcement-title-standalone {
+  display: none;
+  box-sizing: border-box;
+  color: #191919;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  line-height: 19px;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0;
+  text-align: center;
+  background-color: #E9F0F7;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 12px;
+}
+
+@media(max-width: 767px) {
+  #announcement {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #CED9E4;
+  }
+
+  #announcement .title {
+    display: none;
+  }
+
+  #announcement-title-standalone {
+    display: block;
+  }
+
+  .currency {
+    width: 50%;
+  }
+  .languagePicker {
+    width: 50%;
+    margin-top: 5px;
+  }
 }
